# hospital--navigation-robot

./: README.md  README_cn.md
cruising/: package.xml  setup.cfg  setup.py
cruising/cruising/: cruise_node.py
cruising/cruising/launch/: cruise_launch.py
face_identify/: CMakeLists.txt  cam_test.py  my_ws_server.py  package.xml  package.xml.bak  video_stream.py  web_cam_test.sh
face_identify/launch/: face_identify_launch.py
face_identify/msg/: FaceDetection.msg
face_identify/src/: face_identify_node.cpp
face_identify/templates/: index.html
gui/: ai_page.py  appointment_page.py  countdown_thread.py  department_page.py  dept_config.py  doctor_page.py  main.py  main_window.py  utils.py  voice_page.py
navigation/config/: lds_2d.lua
navigation/launch/: nav_bringup.launch.py
navigation/maps/: 201-3.pgm  201-3.yaml  418.pgm  418.yaml  420.pgm  420.yaml  jul5.pgm  jul5.yaml  jun23-3nd.pgm  jun23-3nd.yaml  jun23.pgm  jun23.yaml  jun23sed.pgm  jun23sed.yaml  jun24.pgm  jun24.yaml  jun27.pgm  jun27.yaml  my_map.pgm  my_map.yaml  myhospital.pgm  myhospital.yaml
navigation/param/: nav2.yaml
send_goal/: CMakeLists.txt  package.xml
send_goal/launch/: send_goal.launch.py
send_goal/script/: watch_goal_pose.py
send_goal/src/: send_goal_node.cpp
voice_id/: mp3_to_text.py  nav_target.txt  recommendation.py  total.sh
