<?xml version="1.0"?>
<package format="3">
  <name>originbot_send_goal</name>
  <version>0.0.0</version>
  <description>Goal sender node for OriginBot</description>
  <maintainer email="support@ps-micro.com">zhukao</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

